--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "aws-amplify": "^1.1.6",
     "lodash": "^4.17.11",
     "react": "^16.5.2",
@@ -10,13 +12,16 @@
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.5.2",
+    "react-google-charts": "^3.0.15",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-stripe-elements": "^1.6.0",
     "react-tag-input": "^6.3.0",
+    "react-trend": "^1.2.5",
     "semantic-ui-react": "^0.85.0",
     "terser": "^3.14.1",
+    "typeface-roboto": "0.0.75",
     "uuid": "^3.3.2"
   },
   "scripts": {
